--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -17,22 +17,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"></fragment>
+        android:name="com.google.android.gms.maps.SupportMapFragment">
+
+    </fragment>
     <Button
         android:id="@+id/Btn_Logout"
         android:layout_marginLeft="30dp"
+        android:text="SignOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/button_rounded"
         android:onClick="btn_logout"
-        />
+        android:layout_marginStart="30dp" />
     <Button
         android:id="@+id/parkingstatus"
         android:layout_marginLeft="300dp"
+        android:text="Status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/button_rounded"
         android:onClick="ParkingStatus"
-        />
+        android:layout_marginStart="300dp" />
 
 </RelativeLayout>
