--- a/app/src/main/res/layout/activity_parking_status.xml
+++ b/app/src/main/res/layout/activity_parking_status.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayoutt xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,8 +22,10 @@
         <TextView
             android:id="@+id/ViewStatus"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content">
+
+        </TextView>
     </androidx.core.widget.NestedScrollView>
 
 
-</LinearLayoutt>
+</LinearLayout>
